v0.10/_sources/examples/plots/Combined_plotting.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_plots_Combined_plotting.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_plots_Combined_plotting.py:


Combined Plotting
=================

Demonstrate the use of MetPy's simplified plotting interface combining multiple plots.

Also shows how to control the maps that are plotted. Plots sample NARR data.


.. code-block:: default


    import xarray as xr

    from metpy.cbook import get_test_data
    from metpy.plots import ContourPlot, ImagePlot, MapPanel, PanelContainer
    from metpy.units import units

    # Use sample NARR data for plotting
    narr = xr.open_dataset(get_test_data('narr_example.nc', as_file_obj=False))







Create a contour plot of temperature


.. code-block:: default

    contour = ContourPlot()
    contour.data = narr
    contour.field = 'Temperature'
    contour.level = 850 * units.hPa
    contour.linecolor = 'red'
    contour.contours = 15







Create an image plot of Geopotential height


.. code-block:: default

    img = ImagePlot()
    img.data = narr
    img.field = 'Geopotential_height'
    img.level = 850 * units.hPa








Plot the data on a map


.. code-block:: default

    panel = MapPanel()
    panel.area = 'us'
    panel.layers = ['coastline', 'borders', 'states', 'rivers', 'ocean', 'land']
    panel.title = 'NARR Example'
    panel.plots = [contour, img]

    pc = PanelContainer()
    pc.size = (10, 8)
    pc.panels = [panel]
    pc.show()



.. image:: /examples/plots/images/sphx_glr_Combined_plotting_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /home/travis/virtualenv/python3.6.7/lib/python3.6/site-packages/cartopy/io/__init__.py:260: DownloadWarning: Downloading: http://naciscdn.org/naturalearth/110m/physical/ne_110m_land.zip
      warnings.warn('Downloading: {}'.format(url), DownloadWarning)
    /home/travis/virtualenv/python3.6.7/lib/python3.6/site-packages/cartopy/io/__init__.py:260: DownloadWarning: Downloading: http://naciscdn.org/naturalearth/110m/physical/ne_110m_rivers_lake_centerlines.zip
      warnings.warn('Downloading: {}'.format(url), DownloadWarning)




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  5.583 seconds)


.. _sphx_glr_download_examples_plots_Combined_plotting.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: Combined_plotting.py <Combined_plotting.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: Combined_plotting.ipynb <Combined_plotting.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
